# Integrador

./: .gitignore  README.md  package-lock.json  package.json
.github/workflows/: rust.yml
Gerenciador de Contratos/: .env.example  .gitignore  criar_conta.html  formulario.html  index.html  menu.html  package-lock.json  package.json  redefinicao_senha.html  reseta_senha.html  tailwind.config.js  vitest.config.ts
Gerenciador de Contratos/proto/: user.proto
Gerenciador de Contratos/public/: manifest.json  sw.js
Gerenciador de Contratos/src/: App.jsx  _arquivo.jsx  _dados_usuario.jsx  _formulario_p1.jsx  _home.jsx  _login.jsx  altera_senha.jsx  apagar_conta.jsx  arquivo.jsx  atualiza_senha.jsx  buscar_cliente.jsx  buscar_contrato.jsx  buscar_maquina.jsx  cadastrar_contrato.jsx  cadastrar_locatario.jsx  cadastrar_maquina.jsx  cria_conta.jsx  dados_usuario.jsx  endereco.jsx  formulario.css  formulario_p1.jsx  home.jsx  index.css  locatario.jsx  login.jsx  main.jsx  main.tsx  maquina.jsx  menu.jsx  pdf_call.jsx  pdf_gen.jsx  redefinicao_senha.css  redefinicao_senha.jsx  relatorio_contratos.jsx  relatorio_contratos_a_vencer.jsx  relatorio_estoque_total.jsx  (+7 more)
Gerenciador de Contratos/src-back/: .gitignore  Cargo.toml  Secrets.toml  build.rs  diesel.toml
Gerenciador de Contratos/src-back/src/: client.rs  main.rs  mid.rs  schema.rs  server.rs
Gerenciador de Contratos/src-back/src/controllers/: codigos_recuperacao.rs  contas_bancarias.rs  contratos.rs  enderecos.rs  enderecos_usuarios.rs  envia_emails.rs  imagens_maquinas.rs  locadoras.rs  locatarios.rs  maquinas.rs  maquinas_usuarios.rs  mod.rs  multipart.rs  notificacoes.rs  oauth.rs  solicitacoes_contratos.rs  usuarios.rs
Gerenciador de Contratos/src-back/src/migrations/2024-11-09-170624_criar_usuarios/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2024-12-18-015611_criar_codigos_recuperacao/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-01-07-121208_criar_maquinas/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-01-24-140527_criar_sessoes/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-01-24-231231_alterar_usuarios_adicionar_origemconta/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-01-27-212840_criar_enderecos/: down.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-05-191809_criar_locador/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-05-192452_criar_conta_bancaria/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-10-204312_criar_contratos/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-10-205622_criar_contratos/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-10-205732_solicitacoes_contratos/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-10-210728_criar_contratos/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-10-211904_criar_solicitacoes_contratos/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-10-213022_criar_solicitacoes_contratos/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-11-035811_criar_contratos/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-14-162322_criar_notificacoes/: down.sql  up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-18-043545_atualizar_imagens/: up.sql
Gerenciador de Contratos/src-back/src/migrations/2025-03-18-185103_atualizar_descricao_maquinas/: down.sql
Gerenciador de Contratos/src-back/src/model/: endereco.rs  mod.rs
Gerenciador de Contratos/src-back/src/models/: codigos_recuperacao.rs  contas_bancarias.rs  enderecos.rs  enderecos_usuarios.rs  imagens.rs  imagens_maquinas.rs  locadoras.rs  locatarios.rs  maquinas.rs  maquinas_usuarios.rs  mod.rs  notificacoes.rs  solicitacoes_contratos.rs  usuarios.rs
Gerenciador de Contratos/src-back/src/routes/: mod.rs
Gerenciador de Contratos/src-back/src/tests/: codigos_recuperacao.rs  contas_bancarias.rs  enderecos.rs  enderecos_usuarios.rs  locadoras.rs  locatarios.rs  maquinas.rs  mod.rs  usuarios.rs
Gerenciador de Contratos/src-java/: pom.xml
Gerenciador de Contratos/src-tauri/: .env  .gitignore  Cargo.toml  diesel.toml  tauri.conf.json
Gerenciador de Contratos/src-tauri/src/: db.rs  main.rs
Gerenciador de Contratos/src-tauri/src/controller/: contrato.rs  endereco.rs  erro.rs  locadora.rs  locatario.rs  maquina.rs  mod.rs  socioadm.rs  usuario.rs
Gerenciador de Contratos/src-tauri/src/controllers/: usuarios.rs
Gerenciador de Contratos/src-tauri/src/model/: contrato.rs  endereco.rs  erro.rs  locadora.rs  locatario.rs  maquina.rs  mod.rs  socioadm.rs  usuario.rs
Gerenciador de Contratos/src-tauri/src/models/: usuarios.rs
Gerenciador de Contratos/src-tauri/src/routes/: mod.rs
Gerenciador de Contratos/src-tauri/src/test/: e2e.rs  endereco.rs  locadora.rs  locatario.rs  maquina.rs  mod.rs  socioadm.rs  usuario.rs
Gerenciador de Contratos/src-tauri/src/tests/: usuarios.rs
html/: index.html  index.php
src-back/: .env.example  Cargo.toml
src-back/src/: main.rs  schema.rs
src-back/src/controllers/: locadoras.rs  locatarios.rs  middleware.rs  solicitacoes_contratos.rs
src-back/src/migrations/2025-01-12-223824_criar_imagens/: up.sql
src-back/src/migrations/2025-01-16-144347_criar_maquinas_usuarios/: down.sql
src-back/src/migrations/2025-01-27-215329_criar_endereco_usuario/: up.sql
src-back/src/migrations/2025-03-05-191809_criar_locador/: down.sql
src-back/src/migrations/2025-03-05-192004_criar_locatario/: down.sql  up.sql
src-back/src/migrations/2025-03-18-043545_atualizar_imagens/: down.sql
src-back/src/migrations/2025-03-18-185103_atualizar_descricao_maquinas/: up.sql
src-back/src/migrations/2025-03-23-222601_atualizar_usuarios/: up.sql
src-back/src/models/: contratos.rs  enderecos_usuarios.rs  locadoras.rs  maquinas.rs  usuarios.rs
src-back/src/tests/: maquinas.rs
(+132 files in other folders)
