[package]
name = "gerenciador-de-contratos"
version = "0.0.0"
description = "Gerenciador de Contratos"
authors = ["Hadson Ramalho, Jefferson Ferreira"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
mysql_async = "0.34.1"
dotenv = "0.15.0"
pwhash = "1"
lettre = "0.11.7"
chrono = { version = "^0", features = ["serde"] }
thiserror = "1.0"
tokio = { version = "1", features = ["full", "macros"] }

axum = { version = "0.7.7", features = [ "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
tower-http = {version = "0.6.1", features = ["cors"] }
validator = { version = "0.18", features = ["derive"] }

diesel = { version = "2.2.0", features = ["postgres", "chrono"] }
pq-sys = { version = "0.6", features = ["bundled"] }
openssl-sys = { version = "0.9.100", features = ["vendored"] } 

bigdecimal = "0.1.2"
rand = "0.8.5"

hyper = "1"
axum_typed_multipart = "0.13.2"