[package]
name = "gerenciador-de-contratos"
version = "0.0.0"
description = "Um sistema feito para otimizar a criação e gerenciamento de contratos."
authors = ["Hadson Ramalho, ..."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
mysql_async = "0.34.1"
dotenv = "0.15.0"
pwhash = "1"
lettre = "0.11.7"


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]