[package]
name = "gerenciador-de-contratos"
version = "0.0.0"
description = "Gerenciador de Contratos"
authors = ["Hadson Ramalho, ..."]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "notification-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
bincode = "1.3"
mysql_async = "0.34.1"
dotenv = "0.15.0"
pwhash = "1"
lettre = "0.11.7"
chrono = "0.4.38"
thiserror = "1.0"
tokio = { version = "1", features = ["full", "macros"] }

axum = { version = "0.7.7", features = [ "macros"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenvy = "0.15"
diesel = { version = "2.2.0", features = ["postgres"] }
tower-http = {version = "0.6.1", features = ["cors"] }
validator = { version = "0.18", features = ["derive"] }


[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
